src/pages/component/_template/code-html.scss
@use "../../../styles/variables" as *;

.codes-container {
  max-width: 945px;
  // TODO: layout is a mess.
  // CodeMirror force the HTML editor to be very wide.

  margin: auto;
  margin-block: 1.5em;

  border: 1px solid $border-col-light;
  border-radius: 6px;

  overflow: hidden;
}

.codes-toolbar {
  display: flex;
  gap: 1em;
  padding: .5em 1em;
  background: $background;

  & button, .button {
    font-size: .8em;
  }
}

.html-view {
  padding: .5em 1em;
}

.html-editor {
  max-width: 100%;
}

.copy-status {
  display: flex;
  align-items: center;
  font-size: .8em;
}

